--- a/turkishtea-web-api/pom.xml
+++ b/turkishtea-web-api/pom.xml
@@ -24,6 +24,14 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
